# auto-index-mcp

./: .gitignore  LICENSE  README.md  fastmcp.json  install_windows.bat  pyproject.toml
.well-known/: mcp.json
scripts/: smoke_auto_index.py  verify_mcp_stdio.py
src/auto_index_mcp/: __init__.py  __main__.py  server.py
src/auto_index_mcp/compatibility/: __init__.py  code_index.py
src/auto_index_mcp/core/: __init__.py  _utils.py  background_indexer.py  clangd_bootstrap.py  config.py  ignore_config.py  ignore_rules.py  index_policy.py  (+30 more)
tests/: conftest.py  lsp_fixtures.py  test_auto_index_service.py  test_background_index.py  test_boundary_conditions.py  test_build_lock.py  test_child_index_boundaries.py  test_child_index_discovery.py  test_clangd_bootstrap.py  test_concurrency_stress.py  test_diff_filesystem_boundaries.py  test_embedding_independent_db.py  test_encoding_security_boundaries.py  test_ignore_rules.py  test_index_store.py  test_language_coverage.py  test_lsp_client.py  test_lsp_filesystem_targets.py  test_lsp_lifecycle.py  test_lsp_manager.py  test_lsp_performance.py  test_lsp_process_guard.py  test_lsp_restarts.py  test_lsp_session_protocol.py  test_lsp_stress.py  test_lsp_transport.py  test_lsp_writer.py  test_quality_filters.py  test_quality_stress.py  test_quality_tools.py  test_search_backend.py  test_search_indexing_state.py  test_search_truncation.py  test_semantic_background.py  test_semantic_search.py  test_server_shutdown.py  test_service_lsp_wiring.py  test_service_rebuild_reuse.py  test_service_workspace_integration.py  test_stress.py  (+4 more)
(+57 files in other folders)
